Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
-
None
Description
ir/encoding_benchmark.cc.o -c ../src/parquet/encoding_benchmark.cc ../src/parquet/encoding_benchmark.cc:242:53: error: static_assert with no message is a C++17 extension [-Werror,-Wc++17-extensions] static_assert(sizeof(CType) == sizeof(*raw_values)); ^ , "" ../src/parquet/encoding_benchmark.cc:286:53: error: static_assert with no message is a C++17 extension [-Werror,-Wc++17-extensions] static_assert(sizeof(CType) == sizeof(*raw_values));
Attachments
Issue Links
- links to