PARQUET-1865: [C++] Fix usages of C++17 extensions in parquet/encoding_benchmark.cc

Compilation was failing for me with clang-8 with the following warning

```
../src/parquet/encoding_benchmark.cc:286:53: error: static_assert with
no message is a C++17 extension [-Werror,-Wc++17-extensions]
  static_assert(sizeof(CType) == sizeof(*raw_values));
```

Closes #7237 from wesm/PARQUET-1865

Authored-by: Wes McKinney <wesm+git@apache.org>
Signed-off-by: Wes McKinney <wesm+git@apache.org>